--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.2.1",
     "core-js": "^3.8.3",
+    "tailwindcss": "^3.2.4",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1"
   },
