--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fontsource/fira-sans-condensed": "^4.5.10",
     "@fortawesome/fontawesome-free": "^6.2.1",
     "core-js": "^3.8.3",
     "tailwindcss": "^3.2.4",
