--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@fontsource/fira-sans-condensed": "^4.5.10",
     "@fortawesome/fontawesome-free": "^6.2.1",
+    "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1"
