--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@fontsource/fira-sans-condensed": "^4.5.10",
+    "@fontsource/arsenal": "^4.5.9",
+    "@fontsource/tenor-sans": "^4.5.10",
     "@fortawesome/fontawesome-free": "^6.2.1",
     "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
