--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@fortawesome/fontawesome-free": "^6.2.1",
     "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
+    "jquery": "^3.6.3",
+    "slick-carousel": "^1.8.1",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1"
   },
